--- a/.github/workflows/jd_live_redrain.yml
+++ b/.github/workflows/jd_live_redrain.yml
@@ -6,7 +6,7 @@ name: 「京东」超级直播间红包雨
 on:
   workflow_dispatch:
   schedule:
-    - cron: '25-30/1 12-15/1 8-13 3 *'
+    - cron: '25-34/3 12-15/1 12,13 3 *'
   repository_dispatch:
     types: jd_live_redrain
 jobs:
