--- a/.github/workflows/DIY_shopsign.yml
+++ b/.github/workflows/DIY_shopsign.yml
@@ -10,7 +10,7 @@ on:
   watch:
     types: started
   repository_dispatch:
-    types: jd_dtqd
+    types: DIY_shopsign
 jobs:
   build:
 
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: ElsaKing/DogDog
+          repository: cui521/jdqd
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
@@ -37,7 +37,7 @@ jobs:
           npm install
       - name: '运行 「京东」店铺签到 '
         run: |
-          node jd_dtqd.js
+          node DIY_shopsign.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
