--- a/.github/workflows/DIY_shopsign.yml
+++ b/.github/workflows/DIY_shopsign.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          repository: cui521/jdqd
+          repository: ElsaKing/DogDog
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
