--- a/.github/workflows/jd_bean_sign.yml
+++ b/.github/workflows/jd_bean_sign.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「京豆」每日签到
+name: 「京东」每日签到
 
 on:
   workflow_dispatch:
@@ -33,7 +33,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 「京豆」每日签到'
+      - name: '运行 「京东」每日签到'
         run: |
           node jd_bean_sign.js
         env:
