--- a/.github/workflows/jd_dreamFactory.yml
+++ b/.github/workflows/jd_dreamFactory.yml
@@ -6,7 +6,7 @@ name: 「京喜」京喜工厂
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10 * * * *'
+    - cron: '*/30 * * * *'
   repository_dispatch:
     types: jd_dreamFactory
 jobs:
