--- a/.github/workflows/monk_inter_shop_sign.yml
+++ b/.github/workflows/monk_inter_shop_sign.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「0点」渠道店铺签到 
+name: 「0点」店铺签到 
 
 on:
   workflow_dispatch:
@@ -33,7 +33,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 「0点」渠道店铺签到 '
+      - name: '运行 「0点」店铺签到 '
         run: |
           node monk_inter_shop_sign.js
         env:
