--- a/.github/workflows/jd_sgmh.yml
+++ b/.github/workflows/jd_sgmh.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「京东」闪购盲盒
+name: 「0点」闪购盲盒
 
 on:
   workflow_dispatch:
@@ -33,7 +33,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 「京东」闪购盲盒'
+      - name: '运行 「0点」闪购盲盒'
         run: 
           node jd_sgmh.js
         env:
