--- a/.github/workflows/jd_live.yml
+++ b/.github/workflows/jd_live.yml
@@ -6,7 +6,7 @@ name: 「京东」京东直播
 on:
   workflow_dispatch:
   schedule:
-    - cron: '10-20/5 4 * * *'
+    - cron: '24 0-23/8 * * *'
   repository_dispatch:
     types: jd_live
 jobs:
