--- a/serverless.yml
+++ b/serverless.yml
@@ -22,6 +22,12 @@ inputs:
           cronExpression: "50/1 59 23 * * * *"
           enable: true
           argument: jd_blueCoin
+    - timer: #宠汪汪积分兑换奖品
+        parameters:
+          name: RedeemJoyReward
+          cronExpression: "50/1 59 7 * * * *"
+          enable: true
+          argument: jd_joy_reward
   environment: #  环境变量
     variables: #  环境变量对象
       AAA: BBB # 不要删除，用来格式化对齐追加的变量的
