Update and rename jd_fanslove.yml to z_fanslove.yml

--- a/.github/workflows/z_fanslove.yml
+++ b/.github/workflows/z_fanslove.yml
@@ -8,7 +8,7 @@ on:
   schedule:
     - cron: '0 16 * * *'
   repository_dispatch:
-    types: jd_fanslove
+    types: z_fanslove
 jobs:
   build:
 
@@ -35,7 +35,7 @@ jobs:
           npm install
       - name: '运行 「京东」粉丝互动'
         run: |
-          node jd_fanslove.js
+          node z_fanslove.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
