--- a/.github/workflows/z_shake.yml
+++ b/.github/workflows/z_shake.yml
@@ -8,7 +8,7 @@ on:
   schedule:
     - cron: '3 12 * * *'
   repository_dispatch:
-    types: jd_shake
+    types: z_shake
 jobs:
   build:
 
@@ -35,7 +35,7 @@ jobs:
           npm install
       - name: '运行 「京东」超级摇一摇'
         run: |
-          node jd_shake.js
+          node z_shake.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
