--- a/serverless.yml
+++ b/serverless.yml
@@ -69,7 +69,7 @@ inputs:
           name: Red-Packet
           cronExpression: "30 1 1,2,23 * * * *"
           enable: true
-          argument: jd_redPacket_new
+          argument: jd_redPacket_new&jd_speed_redpocke
     - timer: #十元街/赚京豆小程序
         parameters:
           name: SYJ
