--- a/.github/workflows/z_mother_jump.yml
+++ b/.github/workflows/z_mother_jump.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「活动」跳一跳
+name: 「活动」母婴跳一跳
 
 on:
   workflow_dispatch:
@@ -33,7 +33,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 「活动」跳一跳'
+      - name: '运行 「活动」母婴跳一跳'
         run: |
           node z_mother_jump.js
         env:
