--- a/serverless.yml
+++ b/serverless.yml
@@ -16,12 +16,18 @@ inputs:
   memorySize: 64 # 内存大小，单位MB
   timeout: 900 # 超时时间，单位秒
   events: #触发器
-    - timer: #东东超市兑换奖品
+    - timer: #超级直播间红包雨
         parameters:
-          name: Redeem-Supermarket
-          cronExpression: "52/1 59 23 * * * *"
+          name: Live-RedRain
+          cronExpression: "0-5 0,30,31 20-23/1 16,17,20 4 * *"
           enable: true
-          argument: jd_blueCoin
+          argument: jd_live_redrain.js 
+#    - timer: #东东超市兑换奖品
+#        parameters:
+#          name: Redeem-Supermarket
+#          cronExpression: "52/1 59 23 * * * *"
+#          enable: true
+#          argument: jd_blueCoin
     - timer: #宠汪汪积分兑换奖品
         parameters:
           name: Redeem-Joy-Reward
