--- a/serverless.yml
+++ b/serverless.yml
@@ -19,15 +19,15 @@ inputs:
     - timer: #超级直播间红包雨
         parameters:
           name: Live-RedRain
-          cronExpression: "0-5 0,30,31 20-23/1 17,20 4 * *"
+          cronExpression: "0,2 0,30,31 20-23/1 20 4 * *"
           enable: true
           argument: jd_live_redrain
-    - timer: #宠汪汪积分兑换奖品
+    - timer: #整点京豆雨
         parameters:
-          name: Redeem-Joy-Reward
-          cronExpression: "52/1 59 23,7,15 * * * *"
+          name: Super-RedRain
+          cronExpression: "3 0 * * * * *"
           enable: true
-          argument: jd_joy_reward
+          argument: jd_super_redrain
     - timer: #东东超市兑换奖品
         parameters:
           name: Redeem-Supermarket
