--- a/.github/workflows/z_health_community.yml
+++ b/.github/workflows/z_health_community.yml
@@ -6,7 +6,7 @@ name: 「活动」健康社区-任务
 on:
   workflow_dispatch:
   schedule:
-    - cron: '25 * * * *'
+    - cron: '25 0-23/3 * * *'
   repository_dispatch:
     types: z_health_community
 jobs:
