Update and rename jd_cfd.yml to jd_cfd_old.yml

--- a/.github/workflows/jd_cfd_old.yml
+++ b/.github/workflows/jd_cfd_old.yml
@@ -8,7 +8,7 @@ on:
   schedule:
     - cron: '7 16,0,5,11 * * *'
   repository_dispatch:
-    types: jd_cfd
+    types: jd_cfd_old
 jobs:
   build:
 
@@ -33,7 +33,7 @@ jobs:
           npm install
       - name: '运行 「京东」财富岛'
         run: |
-          node jd_cfd.js
+          node jd_cfd_old.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
