Update and rename deploy_tencent_scf_2.yml to deploy_tencent_scf2.yml

--- a/.github/workflows/deploy_tencent_scf2.yml
+++ b/.github/workflows/deploy_tencent_scf2.yml
@@ -2,7 +2,7 @@ name: 「Tencent」云函数_2
 on:	
   workflow_dispatch:
   repository_dispatch:
-    types: deploy_tencent_scf_2
+    types: deploy_tencent_scf2
 jobs:	
   build:	
     runs-on: ubuntu-latest	
