--- a/.github/workflows/jd_unsubscribe.yml
+++ b/.github/workflows/jd_unsubscribe.yml
@@ -1,10 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「手动」取关店铺商品
+name: 「京东」取关店铺商品
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '0 */6 * * *'
   repository_dispatch:
     types: jd_unsubscribe
 jobs:
