--- a/.github/workflows/jd_bean_home.yml
+++ b/.github/workflows/jd_bean_home.yml
@@ -6,7 +6,7 @@ name: 「京豆」额外奖励
 on:
   workflow_dispatch:
   schedule:
-    - cron: '31 * * * *'
+    - cron: '31 16 * * *'
   repository_dispatch:
     types: jd_bean_home
 jobs:
