--- a/.github/workflows/adolf_oneplus.yml
+++ b/.github/workflows/adolf_oneplus.yml
@@ -49,3 +49,4 @@ jobs:
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          ADOLF_ADDSKU: ${{ secrets.ADOLF_ADDSKU }}
