--- a/.github/workflows/z_carnivalcity.yml
+++ b/.github/workflows/z_carnivalcity.yml
@@ -6,7 +6,7 @@ name: 「活动」手机狂欢城
 on:
   workflow_dispatch:
   schedule:
-    - cron: '8 0-23/12 * * *'
+    - cron: '18 * * * *'
   repository_dispatch:
     types: z_carnivalcity
 jobs:
