--- a/.github/workflows/jd_syj.yml
+++ b/.github/workflows/jd_syj.yml
@@ -1,12 +1,12 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: 「京东」赚京豆new
+name: 「京东」赚京豆
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 16 * * *'
+    - cron: '0 16-20 * * *'
   repository_dispatch:
     types: jd_syj
 jobs:
@@ -31,7 +31,7 @@ jobs:
       - name: npm install
         run: |
           npm install
-      - name: '运行 「京东」赚京豆new'
+      - name: '运行 「京东」赚京豆'
         run: |
           node jd_syj.js
         env:
