Update and rename z_health_community.yml to jd_health.yml

--- a/.github/workflows/jd_health.yml
+++ b/.github/workflows/jd_health.yml
@@ -6,9 +6,9 @@ name: 「活动」健康社区-任务
 on:
   workflow_dispatch:
   schedule:
-    - cron: '25 0-23/3 * * *'
+    - cron: '13 14,17,22 * * *'
   repository_dispatch:
-    types: z_health_community
+    types: jd_health
 jobs:
   build:
 
@@ -33,7 +33,7 @@ jobs:
           npm install
       - name: '运行 「活动」健康社区-任务'
         run: |
-          node z_health_community.js
+          node jd_health.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
           PUSH_PLUS_TOKEN: ${{ secrets.PUSH_PLUS_TOKEN }}
