--- a/.github/workflows/deploy_tencent_scf.yml
+++ b/.github/workflows/deploy_tencent_scf.yml
@@ -89,9 +89,9 @@ jobs:
       - name: "安装依赖"
         run: |
           npm install
-          npm install crypto-js
-          npm install got@11.5.1
+          npm install got
           npm install tough-cookie
+          npm install js-yaml
 
       - name: "将Secrets里面配置的变量添加到severless.yml里面作为环境变量"
         run: |
@@ -166,14 +166,11 @@ jobs:
 
       - name: "压缩文件夹"
         run: zip -r myfile.zip ./*
-        
+
       - name: "安装依赖"
         run: |
           npm install
           npm install tencentcloud-sdk-nodejs
-          npm install got@11.5.1
-          npm install tough-cookie
-          npm install js-yaml
 
       - name: "部署到腾讯云函数"
         run: node tencentscf.js
